can position blocks in the script now

--- a/blockcode/blocks.css
+++ b/blockcode/blocks.css
@@ -4,30 +4,37 @@ html, body{
 	border: 0;
 	margin: 0;
 }
-div{
+.menu, .script{
 	border: 1px inset #021429;
 	border-radius: 7px;
 }
 h1, h2, h3, h4, h5, h6{
 	text-align: center;
 }
-.menu{
-	background-color: PeachPuff;
+.menu-column{
 	width: 24%;
 	height: 85%;
 	float: left;
 	margin-left: 10px;
+	overflow-y: auto;
+}
+.menu{
+	background-color: PeachPuff;
 }
 .menu.over{
 	background-color: BurlyWood;
 }
-.script{
-	background-color: LightSteelBlue;
+.script-column{
 	width: 24%;
 	height: 85%;
 	float: left;
 	margin-left: 10px;
 	margin-right: 10px;
+	overflow-y: auto;
+}
+.script{
+	background-color: LightSteelBlue;
+	height: 100%;
 }
 .script.over{
 	background-color: CadetBlue;
@@ -40,12 +47,18 @@ h1, h2, h3, h4, h5, h6{
 	margin-right: 10px;
 }
 .block{
-	padding: 20px;
+	padding: 5px;
 	margin: 10px;
 	cursor: move;
 }
 .block.running{
 	outline: 2px solid red;
+}
+.block.next{
+	outline: 2px solid green;
+}
+.block.dragging{
+	opacity: 0.4;
 }
 .menu .block{
 	background-color: Coral;
@@ -57,4 +70,31 @@ h1, h2, h3, h4, h5, h6{
 .block input{
 	margin-left: 1em;
 	width: 5em;
+	margin-bottom: 5px;
+}
+
+.container{
+	margin-left: 20px;
+	padding-bottom: 10px;
+	border: 0;
+	background-color: LightSteelBlue;
+	border-bottom-right-radius: 0;
+	border-top-right-radius: 0;
+	margin-right: -6px;
+}
+
+.menu .container{
+	background-color: PeachPuff;
+}
+
+.over .container{
+	background-color: CadetBlue;
+}
+
+.pseudo-cursor{
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	border: 1px solid yellow;
+	pointer-events: none;
 }
