--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -1,8 +1,9 @@
 <script src="jquery.min.js"></script>
 <script src="highcharts.js"></script>
+<link href="styles.css" rel="stylesheet" type="text/css" />
 
 <html>
-  <table>
+  <table class="data">
     <th>User</th>
     <th>File</th>
     <th>Steps</th>
@@ -21,7 +22,6 @@
 
 <script>
   $(function () {
-        // alert(<%= @filtered_data%>);
         $('#container').highcharts({
             title: {
                 text: 'bag-10-a-1.txt vs bag-10-g-2.txt',
