--- a/pedometer/views/compare.erb
+++ b/pedometer/views/compare.erb
@@ -3,21 +3,7 @@
 <link href="/styles.css" rel="stylesheet" type="text/css" />
 
 <html>
-  <table class="data">
-    <th>User</th>
-    <th>File</th>
-    <th>Steps</th>
-    <% @data.each do |file, details| %>
-    <tr>
-      <td><%= file.split('/')[2] %></td>
-      <td><%= file.split('/')[3] %></td>
-      <td><%= details[:steps] %></td>
-    </tr>
-    <% end %>
-  </table>
-  
-  <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-
+    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 </html>
 
 <script>
@@ -48,10 +34,10 @@
             },
             series: [{
                 name: 'Female Bag Accelerometer',
-                data: <%= @data["test/data/female/bag-10-a-1.txt"][:filtered_data] %>
+                data: <%= @data.first[:filtered_data] %>
             }, {
                 name: 'Female Bag Gravitational',
-                data: <%= @data["test/data/female/bag-10-g-1.txt"][:filtered_data] %>
+                data: <%= @data.last[:filtered_data] %>
             }]
         });
     });
