Find pairs to link to compare page from data

--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -1,58 +1,36 @@
-<script src="/jquery.min.js"></script>
-<script src="/highcharts.js"></script>
 <link href="/styles.css" rel="stylesheet" type="text/css" />
 
 <html>
-  <table class="data">
-    <th>User</th>
-    <th>File</th>
-    <th>Steps</th>
-    <% @data.each do |file, details| %>
+  <table>
     <tr>
-      <td><%= file.split('/')[2] %></td>
-      <td><%= file.split('/')[3] %></td>
-      <td><%= details[:steps] %></td>
+        <td>
+          <table class="data">
+            <th>User</th>
+            <th>File</th>
+            <th>Steps</th>
+            <% @data.each do |file, steps| %>
+            <tr>
+              <td><%= file.split('/')[2] %></td>
+              <td><%= file.split('/')[3] %></td>
+              <td><%= steps %></td>
+            </tr>
+            <% end %>
+          </table>
+        </td>
+        <td class="compare">
+            <% @pairs.each do |file_1, file_2| %>
+                <div>
+                    <%= file_1%>, <%= file_2%>
+                </div>
+            <% end %>
+            <a href="/data/compare/test/data/female/bag-10-a-1.txt/and/test/data/female/bag-10-g-1.txt">
+                Compare bag-10-a-1.txt and bag-10-g-1.txt
+            </a>
+            </br>
+            <a href="/data/compare/test/data/female/bag-10-a-2.txt/and/test/data/female/bag-10-g-2.txt">
+                Compare bag-10-a-1.txt and bag-10-g-1.txt
+            </a>
+        </td>
     </tr>
-    <% end %>
-  </table>
-  
-  <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-
+  </table>  
 </html>
-
-<script>
-  $(function () {
-        $('#container').highcharts({
-            title: {
-                text: 'bag-10-a-1.txt vs bag-10-g-2.txt',
-                x: -20 //center
-            },
-            yAxis: {
-                title: {
-                    text: 'Magnitude'
-                },
-                plotLines: [{
-                    value: 0,
-                    width: 1,
-                    color: '#808080'
-                }]
-            },
-            tooltip: {
-                valueSuffix: '°C'
-            },
-            legend: {
-                layout: 'vertical',
-                align: 'right',
-                verticalAlign: 'middle',
-                borderWidth: 0
-            },
-            series: [{
-                name: 'Female Bag Accelerometer',
-                data: <%= @data["test/data/female/bag-10-a-1.txt"][:filtered_data] %>
-            }, {
-                name: 'Female Bag Gravitational',
-                data: <%= @data["test/data/female/bag-10-g-1.txt"][:filtered_data] %>
-            }]
-        });
-    });
-</script>
