Add detail action and view and link from data view

--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -9,11 +9,12 @@
             <th>File</th>
             <th>Steps</th>
             <% @data.each do |file, steps| %>
-            <tr>
-              <td><%= file.split('/')[2] %></td>
-              <td><%= file.split('/')[3] %></td>
-              <td><%= steps %></td>
-            </tr>
+              <% url = "detail/" + file %>
+              <tr>
+                <td><%= file.split('/')[2] %></td>
+                <td><a href=<%= url %>><%= file.split('/')[3] %></a></td>
+                <td><%= steps %></td>
+              </tr>
             <% end %>
           </table>
         </td>
