added add new page button and main link for easier navigation

--- a/wiki/part1/views/list.html
+++ b/wiki/part1/views/list.html
@@ -5,5 +5,11 @@
         {for page in pages}
           <a href="/wiki/{page}">{page}</a><br/>
         {/for}
+        <form action="{url}" method="post">
+            <p>
+                <button type="submit">Add new page</button>
+                <input type="text" name = "title" value="title"/>
+            </p>
+        </form>
     </body>
 </html>
