--- a/wiki/part2/views/edit.html
+++ b/wiki/part2/views/edit.html
@@ -8,6 +8,8 @@
         <form action="{url}" method="post">
             <input type="hidden" name="revision" value="{revision}"/>
             <textarea name="content" style="width:80%;height:80%">{content}</textarea>
+            <br/>
+            <label for="comment">Comment:</label><input type="text" name="comment" value="{comment}" size="100"/>
             <div class="error">{error}</div>
             <button type="submit">Save</button>
         </form>
