--- a/wiki/part2/views/edit.html
+++ b/wiki/part2/views/edit.html
@@ -12,6 +12,7 @@
             <label for="comment">Comment:</label><input type="text" name="comment" value="{comment}" size="40"/>
             <div class="error">{error}</div>
             <button type="submit">Save</button>
+            <a href="/wiki/{title}/">Cancel</a>
         </form>
     </body>
 </html>
