--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -6,14 +6,22 @@
         <td>
           <table class="data">
             <th>User</th>
-            <th>File</th>
-            <th>Steps</th>
+            <th>Method</th>
+            <th>Trial</th>
+            <th>Actual</th>
+            <th>Calculated</th>
+            <th>Delta</th>
+            <th></th>
             <% @data.each do |file, steps| %>
               <% url = "detail/" + file %>
               <tr>
                 <td><%= file.split('/')[2] %></td>
-                <td><a href=<%= url %>><%= file.split('/')[3] %></a></td>
+                <td><%= file.split('/').last.split('-')[0] %></td>
+                <td><%= file.split('/').last.split('-')[3].to_i %></td>
+                <td><%= file.split('/').last.split('-')[1] %></td>
                 <td><%= steps %></td>
+                <td><%= steps - file.split('/').last.split('-')[1].to_i %></td>
+                <td><a href=<%= url %>>Detail</a></td>
               </tr>
             <% end %>
           </table>
