--- a/pedometer/views/detail.erb
+++ b/pedometer/views/detail.erb
@@ -3,7 +3,7 @@
 <link href="/styles.css" rel="stylesheet" type="text/css" />
 
 <html>
-    <%= @file %>
+    <%= @file_name %>
 
     <table>
         <tr>
