--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -27,16 +27,20 @@
     <% end %>
   </table>
   <form method="post" action="/create" enctype="multipart/form-data">
+    <h3 class="upload-header">Device Info</h3>
     <input id="file" name="device[file]" type="file">
     <input class="params" type="text" name="device[rate]" placeholder="Sampling Rate">
     <input class="params" type="text" name="device[meta_data][method]" placeholder="Method">
     <input class="params" type="text" name="device[meta_data][steps]" placeholder="Actual Step Count">
     <input class="params" type="text" name="device[meta_data][trial]" placeholder="Trial Name">
+    <h3 class="upload-header">User Info</h3>
     <select class="params" name="user[gender]">
-      <option value="">(Unknown)</option>
+      <option value="">(Select a gender)</option>
       <option value="female">Female</option>
       <option value="male">Male</option>
     </select>
+    <input class="params" type="text" name="user[height]" placeholder="Height (cm)">
+    <input class="params" type="text" name="user[stride]" placeholder="Stride (cm)">
     <div class="controls"><input type="submit" value="submit"></div>
   </form>
 </html>
