--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -29,18 +29,24 @@
   <form method="post" action="/create" enctype="multipart/form-data">
     <h3 class="upload-header">Device Info</h3>
     <input id="file" name="device[file]" type="file">
-    <input class="params" type="text" name="device[rate]" placeholder="Sampling Rate">
-    <input class="params" type="text" name="device[meta_data][method]" placeholder="Method">
-    <input class="params" type="text" name="device[meta_data][steps]" placeholder="Actual Step Count">
+    <input class="params" type="number" name="device[rate]" placeholder="Sampling Rate">
+    <input class="params" type="number" name="device[meta_data][steps]" placeholder="Actual Step Count">
     <input class="params" type="text" name="device[meta_data][trial]" placeholder="Trial Name">
+    <select class="params" name="device[meta_data][method]">
+      <option value="">(Select a method)</option>
+      <option value="walk">Walking</option>
+      <option value="run">Running</option>
+      <option value="bag_walk">Walking, phone in bag</option>
+      <option value="bag_run">Running, phone in bag</option>
+    </select>
     <h3 class="upload-header">User Info</h3>
     <select class="params" name="user[gender]">
       <option value="">(Select a gender)</option>
       <option value="female">Female</option>
       <option value="male">Male</option>
     </select>
-    <input class="params" type="text" name="user[height]" placeholder="Height (cm)">
-    <input class="params" type="text" name="user[stride]" placeholder="Stride (cm)">
+    <input class="params" type="number" name="user[height]" placeholder="Height (cm)">
+    <input class="params" type="number" name="user[stride]" placeholder="Stride (cm)">
     <div class="controls"><input type="submit" value="submit"></div>
   </form>
 </html>
