meta_data bad idea

--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -30,9 +30,9 @@
     <h3 class="upload-header">Device Info</h3>
     <input id="file" name="device[file]" type="file">
     <input class="params" type="number" name="device[rate]" placeholder="Sampling Rate">
-    <input class="params" type="number" name="device[meta_data][steps]" placeholder="Actual Step Count">
-    <input class="params" type="text" name="device[meta_data][trial]" placeholder="Trial Name">
-    <select class="params" name="device[meta_data][method]">
+    <input class="params" type="number" name="device[steps]" placeholder="Actual Step Count">
+    <input class="params" type="text" name="device[trial]" placeholder="Trial Name">
+    <select class="params" name="device[method]">
       <option value="">(Select a method)</option>
       <option value="walk">Walking</option>
       <option value="run">Running</option>
