added username to conflict display, minor edits

--- a/wiki/part3/views/view.html
+++ b/wiki/part3/views/view.html
@@ -1,4 +1,4 @@
-<div class="nav"><a href="{editLink}">Edit</a> | <a href="/wiki/">Main</a></div>
+<div class="nav">View | <a href="/wiki/{page}/edit">Edit</a> | <a href="/wiki/">Main</a></div>
 <h1>{title}</h1>
 {content}
 <br/>
