--- a/wiki/part3/views/diff.html
+++ b/wiki/part3/views/diff.html
@@ -4,7 +4,7 @@
     {>editor}
 </div>
 <div class="right">
-    <h2>Saved {comparedate}</h2>
+    <h2>Saved {comparedate} by {username}</h2>
     <div class="comparecontent"><pre>{comparecontent}</pre></div>
     <br/>Comment: {comparecomment}
 </div>
