--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -36,8 +36,8 @@
       <option value="">(Select a method)</option>
       <option value="walk">Walking</option>
       <option value="run">Running</option>
-      <option value="bag_walk">Walking, phone in bag</option>
-      <option value="bag_run">Running, phone in bag</option>
+      <option value="bagwalk">Walking, phone in bag</option>
+      <option value="bagrun">Running, phone in bag</option>
     </select>
     <h3 class="upload-header">User Info</h3>
     <select class="params" name="user[gender]">
