--- a/wiki/part3/views/layout.html
+++ b/wiki/part3/views/layout.html
@@ -9,10 +9,13 @@
             .login {float: right;}
             .content {clear: both}
             .comparecontent {border: 1px solid; padding: 3px;}
+            .added {color: green}
+            .removed {color: red; text-decoration: line-through}
+            .common {color: gray}
             h1.title a {text-decoration: none; color: rgb(108, 176, 142); font-family: sans-serif; font-size: 2em;}
             button { background-color: rgb(182, 217, 199) }
+            pre {white-space: pre-wrap;}
         </style>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     </head>
     <body>
         <div class="header">
