--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -11,16 +11,14 @@
     <th>Delta</th>
     <th></th>
     <% @data.each do |h| %>
-      <% device = h[:device] %>
-      <% steps = h[:steps] %>
       <tr>
         <td><%= h[:user].gender %></td>
-        <td><%= device.method %></td>
-        <td><%= device.format %></td>
-        <td><%= device.trial %></td>
-        <td><%= device.steps %></td>
-        <td><%= steps %></td>
-        <td><%= steps - device.steps %></td>
+        <td><%= h[:device].method %></td>
+        <td><%= h[:device].format %></td>
+        <td><%= h[:device].trial %></td>
+        <td><%= h[:device].steps %></td>
+        <td><%= h[:steps] %></td>
+        <td><%= h[:steps] - h[:device].steps %></td>
         <td><a href=<%= "detail/" + h[:file] %>>Detail</a></td>
       </tr>
     <% end %>
