Time interval and distance interval

--- a/pedometer/views/data.erb
+++ b/pedometer/views/data.erb
@@ -22,7 +22,7 @@
     <input id="file" name="device[file]" type="file">
     <input class="params" type="number" name="device[rate]" placeholder="Sampling Rate">
     <input class="params" type="number" name="device[steps]" placeholder="Actual Step Count">
-    <input class="params" type="text" name="device[trial]" placeholder="Trial Name">
+    <input class="params" type="number" name="device[trial]" placeholder="Trial Number">
     <select class="params" name="device[method]">
       <option value="">(Select a method)</option>
       <option value="walk">Walking</option>
